--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "baloot"
-version = "0.0.11"
+version = "0.0.12"
 authors = [
   { name="Taha Shieenavaz", email="tahashieenavaz@gmail.com" },
 ]
@@ -19,7 +19,7 @@ classifiers = [
     "Intended Audience :: Developers",
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
-dependencies = ["numpy"]
+dependencies = []
 keywords = ["helpers", "efficient", "easy"]
 license = { file = "LICENSE" }
 urls = { Homepage="https://github.com/tahashieenavaz/baloot", Repository="https://github.com/tahashieenavaz/baloot", Documentation="https://github.com/tahashieenavaz/baloot#readme" }
